<resources>
    <string name="app_name">PIRO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PIRO</string>
    <string name="nav_header_subtitle">Developed by Agata Lopes</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_chat">Chat with Me</string>
    <string name="menu_mindfulness">Mindfulness Exercises</string>
    <string name="menu_motiv_quotes">Motivational Quotes</string>
    <string name="menu_depression_test">Depression Levels</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_user_guide">User Guide</string>
    <string name="menu_info">More Information</string>
    <string name="menu_email">Email Us</string>
    <string name="title_activity_chat">Chat</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_mindfulness">Mindfulness</string>
    <string name="title_activity_depression">Depression</string>
    <string name="title_activity_motivational">Motivational</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_guide">Guide</string>
    <string name="title_activity_email">Email</string>
    <string name="title_activity_information">Information</string>
    <string name="mainactivity">MainActivity</string>
    <string name="chat">Chat</string>
    <string name="depression">Depression</string>
    <string name="email">Email</string>
    <string name="information">Information</string>
    <string name="mindfulness">Mindfulness</string>
    <string name="motivational">Motivational</string>
    <string name="settings">Settings</string>
    <string name="user_guide">User Guide</string>
    <string name="alert_msg">My name is Piro. \nI am a Chatbot developed for people with depression or anxiety. Or for anyone who wants to have a conversation. \nTry having a go, and chat with me!</string>
    <string name="try_saying_hello">Try saying hello.</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="action_help">Help</string>

    <string name="mind_btn1">Breathe to relax -- @elevatevibe</string>
    <string name="mind_btn10">Relaxing animation 3 -- giphy.com</string>
    <string name="mind_btn8">Relaxing animation 1 -- giphy.com</string>
    <string name="mind_btn9">Relaxing animation 2 -- giphy.com</string>
    <string name="mind_btn7">Follow the ball 3 -- Buzzfeed.com</string>
    <string name="mind_btn6">Follow the ball 2 -- Buzzfeed.com</string>
    <string name="mind_btn5">Follow the ball 1 -- Buzzfeed.com</string>
    <string name="mind_btn4">Clear your mind -- #destressmonday</string>
    <string name="mind_btn3">Breathe with shape 2 -- #destressmonday</string>
    <string name="mind_btn2">Breathe with shape 1 -- giphy.com</string>
    <string name="rand_mot_quote">Random Motivational Quote</string>
    <string name="get_random_quote">Get Random Quote</string>
    <string name="view_gallery">View Gallery</string>
    <string name="title_activity_cbtworksheets">CBTWorksheets</string>
    <string name="menu_cbtworsheets">CBT Worksheets</string>
    <string name="title_activity_cbt">CBT</string>
    <string name="title_activity_terms">Terms</string>
    <string name="recomend_text">If you scored more or equal than 17 you should consider seeing your GP to talk more about your depression.</string>
    <string name="test_finished">Test finished</string>
    <string name="cbt_workouts">CBT Workouts</string>
    <string name="contacts">Contacts</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="score">Score</string>
    <string name="select_the_most_appropriated">Select the most appropriated.</string>
    <string name="question_text">Question Text</string>
    <string name="go_back_to_chat">Go back to chat</string>
    <string name="retry_quiz">Retry Quiz</string>
    <string name="recomendation_here">Recomendation here...</string>
    <string name="your_scored_is_xx">Your scored is XX</string>
    <string name="checkimage">checkImage</string>
    <string name="changeThemeText">Here you can chage the app theme from White to Dark and vise versa.</string>
    <string name="change_app_theme">Change App Theme</string>
    <string name="notText">Note: Once you change this theme your chat with Piro will restart and you will lose your current conversation.</string>

</resources>
