<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_mindfulness"
            android:icon="@drawable/ic_mindfulness"
            android:title="@string/menu_mindfulness" />
        <item
            android:id="@+id/nav_motiv_quotes"
            android:icon="@drawable/ic_motiv_quotes"
            android:title="@string/menu_motiv_quotes" />
        <item
            android:id="@+id/nav_depression_test"
            android:icon="@drawable/ic_depression_test"
            android:title="@string/menu_depression_test" />
        <item
            android:id="@+id/nav_cbtworsheets"
            android:icon="@drawable/ic_cbt"
            android:title="@string/cbt_workouts" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_user_guide"
            android:icon="@drawable/ic_user_guide"
            android:title="@string/menu_user_guide" />
    </group>

    <item android:title="@string/contacts">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_info" />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_email"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_terms"
                android:icon="@drawable/ic_terms"
                android:title="@string/terms_amp_conditions" />
        </menu>
    </item>
</menu>
