<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:layout_gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ResultsActivity"
    tools:showIn="@layout/app_bar_results">

    <ImageView
        android:id="@+id/img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/checkbox_on_background"
        android:contentDescription="@string/checkimage" />

    <TextView
        android:layout_below="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="28sp"
        android:padding="10dp"
        android:id="@+id/testFinish"
        android:textStyle="bold"
        android:text="@string/test_finished"/>

    <TextView
        android:layout_below="@+id/testFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:id="@+id/recomend"
        android:text="@string/recomend_text"/>

    <TextView
        android:layout_below="@+id/recomend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:padding="10dp"
        android:textColor="#000"
        android:layout_margin="10dp"
        android:id="@+id/results_txt"
        android:background="@drawable/border_txt"
        android:text="@string/your_scored_is_xx"/>

    <TextView
        android:layout_below="@+id/results_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:id="@+id/level_txt"
        android:text="@string/recomendation_here"/>

    <Button
        android:layout_below="@+id/level_txt"
        android:id="@+id/retry_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry_quiz"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:background="@drawable/btn_shape"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_below="@+id/retry_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/go_back_to_chat"
        android:background="@drawable/quit_btn"
        android:textColor="#fff"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="24dp"
        android:id="@+id/backChat"/>

</RelativeLayout>