<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:gravity="center"
    android:padding="20sp"
    tools:context=".Settings"
    tools:showIn="@layout/app_bar_settings">

    <TextView
        android:id="@+id/textSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/changeThemeText"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Switch
        android:layout_below="@+id/textSet"
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/change_app_theme" />

    <TextView
        android:layout_below="@+id/switch1"
        android:id="@+id/textSet1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/notText"
        android:textAlignment="center"
        android:textSize="20sp" />

</RelativeLayout>